feat(examples): add 2 new examples, update layout/nav, add visualizers

--- a/examples/react-examples/src/index.css
+++ b/examples/react-examples/src/index.css
@@ -62,17 +62,21 @@
 @keyframes fadeIn {
   from {
     opacity: 0;
+    transform: translateY(20px);
   }
   to {
     opacity: 1;
+    transform: translateY(0);
   }
 }
 
 @keyframes fadeOut {
   from {
     opacity: 1;
+    transform: translateY(0);
   }
   to {
     opacity: 0;
+    transform: translateY(-20px);
   }
 }
