feat(examples): make layouts mobile friendly, clean up ui

--- a/examples/react-examples/src/index.css
+++ b/examples/react-examples/src/index.css
@@ -121,3 +121,13 @@
     transform: translateY(-20px);
   }
 }
+
+@keyframes gradient {
+  0%,
+  100% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+}
