--- a/examples/react-examples/src/index.css
+++ b/examples/react-examples/src/index.css
@@ -49,7 +49,7 @@
   --color-neutral-600: #75757a; /* Slight cool shift */
   --color-neutral-700: #52525a; /* More cool */
   --color-neutral-800: #3a3a42; /* Cooler */
-  --color-neutral-900: #27272e; /* Dark mode background - cool */
+  --color-neutral-900: #23232b; /* Dark mode background - cool */
   --color-neutral-950: #1a1a20; /* Nearly black - cool */
 
   /* Semantic mappings for shadcn/ui components */
